--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <artifactId>ADPAssignment3</artifactId>
   <version>1.0</version>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.5.3</version>
+  </parent>
+
   <name>ADPAssignment3</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -19,6 +25,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
